welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:9: error: not found: value valeur
	return valeur
               ^