welcome.lessons.welcome.array.maxvalue.MaxValue.scala.code
def maxValue(nums:Array[Int]): Int = {
	for (i <- 0 to nums.length-1) {
		var valeur: Int = 0
		if ( nums(i) >= valeur ) {
			valeur == i
		}
		return valeur
	}
	return valeur
}
